@@ -1,13 +1,15 @@
+import org.gradle.nativeplatform.platform.internal.DefaultNativePlatform
+
 plugins {
     id 'java'
     id 'application'
     id 'org.javamodularity.moduleplugin' version '1.8.12'
     id 'org.openjfx.javafxplugin' version '0.0.13'
-    id 'org.beryx.jlink' version '2.25.0'
+    id 'org.beryx.jlink' version '3.0.1'
 }
 
 group 'com.itiscaleb'
-version '1.0-SNAPSHOT'
+version '0.1'
 
 repositories {
     mavenCentral()
@@ -28,10 +30,12 @@ application {
     mainModule = 'com.itiscaleb.cpcompound'
     mainClass = 'com.itiscaleb.cpcompound.CPCompound'
     tasks.run.workingDir = "./build"
+    applicationDefaultJvmArgs = ["--add-opens","javafx.controls/com.sun.javafx.scene.control=com.itiscaleb.cpcompound"]
 }
 
 javafx {
     version = '17.0.6'
+    configuration = 'implementation'
     modules = ['javafx.controls', 'javafx.fxml']
 }
 
@@ -68,11 +72,47 @@ test {
     useJUnitPlatform()
 }
 
+def currentOS = DefaultNativePlatform.currentOperatingSystem
+
 jlink {
-    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
+    addExtraDependencies("javafx")
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
     launcher {
-        name = 'app'
+        name = 'CP-Compound'
+    }
+    if (currentOS.isWindows()) {
+        jpackage {
+            installerType = 'msi'
+            //icon = "${project.rootDir}/.msi/opal.ico"
+            installerOptions = [
+                    '--win-menu',
+                    '--win-menu-group', 'ItisCaleb',
+                    '--win-shortcut-prompt',
+                    '--win-dir-chooser',
+                    '--vendor', 'ItisCaleb',
+                    '--app-version', "${project.version.toString()}",
+            ]
+        }
+    } else if (currentOS.isLinux()) {
+        jpackage {
+            installerType = 'rpm'
+            //icon = "${project.rootDir}/src/main/resources/images/opal.png"
+            installerOptions = [
+                    '--linux-shortcut',
+                    '--linux-package-name', 'cp-compound',
+                    '--app-version', "${project.version.toString()}",
+            ]
+        }
+    } else if (currentOS.isMacOsX()) {
+        jpackage {
+            installerType = 'dmg'
+            //icon = "${project.rootDir}/src/main/resources/images/opal.png"
+            installerOptions = [
+                    '--mac-package-name', 'CP-Compound',
+                    '--mac-package-identifier', 'com.itiscaleb.cpcompound',
+                    '--app-version', "${project.version.toString()}",
+            ]
+        }
     }
 }
 
